# GLiNER2

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  benchmark_statistical.py  pyproject.toml
gliner2/: __init__.py  api_client.py  layers.py  model.py  old_trainer.py  processor.py  span_rep.py  trainer.py
gliner2/inference/: __init__.py  attribute_engine.py  chunking.py  engine.py  schema.py  schema_model.py  span_decoder.py
gliner2/joint_ie/: __init__.py  calibration.py  candidates.py  compiler.py  constraints.py  engine.py  lattice.py  long_text.py  result.py  schema.py  scoring.py
gliner2/joint_ie/optimizers/: __init__.py  base.py  beam.py  greedy.py
gliner2/joint_ie/tests/: test_beam.py  test_candidates.py  test_constraints.py  test_engine.py  test_result.py  test_schema.py  test_scoring.py
gliner2/training/: data.py  lora.py  trainer.py
gliner2/verifiers/: __init__.py  relation_verifier.py
gliner2_training/src/: train.py
scripts/: capture_legacy_oracle.py
tests/: test_api_client_error_handling.py  test_backwards_compat.py  test_entity_extraction.py  test_inference_max_len.py  test_lora_peft.py  test_overfit_ner.py  test_relation_extraction.py  test_schema_input_thresholds_validators.py  test_structure_extraction.py  test_torch_free_import.py  test_trainer_distributed.py  test_trainer_distributed_integration.py
tests/fixtures/compat/: public_surface.json
tests/fixtures/compat/legacy_adapter_golden/: adapter_config.json
tutorial/: 1-classification.md  10-lora_adapters.md  11-adapter_switching.md  2-ner.md  3-json_extraction.md  4-combined.md  5-validator.md  6-relation_extraction.md  7-api.md  8-train_data.md  9-training.md  ner.ipynb
