[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gliner2", "gliner2.*"]

[tool.setuptools.dynamic]
version = {attr = "gliner2.__version__"}

[project]
name = "gliner2"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]

maintainers = [
    {name = "Urchade Zaratiana"},
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.2,<5.0.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.21.4",
    "requests>=2.28.0",
    "tqdm>=4.60.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
training = [
    "wandb",
]
benchmark = [
    "scipy",
]