[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gliner2", "gliner2.*"]

[tool.setuptools.dynamic]
version = {attr = "gliner2.__version__"}

[project]
name = "gliner2"
description = "GLiNER2: Unified Schema-Based Information Extraction and Text Classification"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

maintainers = [
    {name = "Urchade Zaratiana"},
]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "gliner",
    "pydantic>=2.0.0",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/fastino-ai/GLiNER2"
Repository = "https://github.com/fastino-ai/GLiNER2"